--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <H1>Иногда мне кажется что слов которые есть у человечества недостаточно, дабы описать всю ту степень глубокого неуважения которое царит внутри №2 отдела Полиции г. Горишние Плавни</H1>
+    <H1>Иногда мне кажется, что слов которые есть у человечества недостаточно, дабы описать всю ту степень глубокого неуважения которое царит внутри №2 отдела Полиции г. Горишние Плавни</H1>
 </body>
 </html>
