--- a/index.html
+++ b/index.html
@@ -6,6 +6,32 @@
     <title>Document</title>
 </head>
 <body>
-    <H1>Почему у Ростиков маленькие члены, давайте разбираться</H1>
+   <h1>Заговор Вселенной: Почему у всех Ростиков... маленькие пенисы?</h1>
+
+Древнее пророчество
+Легенда гласит: «Когда на землю падёт сосиска, имя её будет — Ростик». Учёные до сих пор спорят, что это значит, но конспирологи уже всё поняли. Сосиска — метафора. Ростик — мишень. Совпадение? Не думаем.
+<br>
+Генетика против Ростиков
+По неподтверждённым данным института «На коленке», все Ростики рождаются с одним общим геном — GNR-69. Этот ген якобы отвечает за изящные габариты их достоинства. Почему так? Потому что Вселенная решила уравновесить их харизму и доброту. Ведь нельзя быть идеальным во всём!
+<br>
+Тайный заговор женского совета
+Согласно неподтверждённой переписке из чата “Девчонки 2007”, было решено: если парень по имени Ростик — значит, не больше 7 см. Секретное правило природы, чтобы женщины сразу понимали, с чем (или с кем) имеют дело. Шутка! Но кто знает...
+<br>
+Исключения из правил
+Есть один Ростик в Архангельске, у которого всё отлично. Но он переименовался в Артёма. Совпадение? Опять же — не думаем.
+<br>
+Что делать, если ты Ростик?
+Смириться и шутить первым.
+<br>
+Обратиться в ООН.
+<br>
+Придумать свою теорию заговоров и опубликовать её на TikTok.
+<br>
+Переименоваться. Да, мы уже говорили, но это работает!
+<br>
+Заключение
+Ростики, мы вас любим. Ваши размеры — не главное. Главное — это душа, чувство юмора и умение не обижаться на дурацкие статьи, которые пишут друзья в рамках розыгрыша.
+<br>
+Хотелось бы написать, но у тебя просто пенис маленький, смирись...
 </body>
 </html>
