--- a/index.html
+++ b/index.html
@@ -8,30 +8,30 @@
 <body>
    <h1>Заговор Вселенной: Почему у всех Ростиков... маленькие пенисы?</h1>
 
-Древнее пророчество
-Легенда гласит: «Когда на землю падёт сосиска, имя её будет — Ростик». Учёные до сих пор спорят, что это значит, но конспирологи уже всё поняли. Сосиска — метафора. Ростик — мишень. Совпадение? Не думаем.
+<h2>Древнее пророчество</h2>
+<h4>Легенда гласит: «Когда на землю падёт сосиска, имя её будет — Ростик». Учёные до сих пор спорят, что это значит, но конспирологи уже всё поняли. Сосиска — метафора. Ростик — мишень. Совпадение? Не думаем.</h4>
 <br>
-Генетика против Ростиков
-По неподтверждённым данным института «На коленке», все Ростики рождаются с одним общим геном — GNR-69. Этот ген якобы отвечает за изящные габариты их достоинства. Почему так? Потому что Вселенная решила уравновесить их харизму и доброту. Ведь нельзя быть идеальным во всём!
+<h2>Генетика против Ростиков</h2>
+<h4>По неподтверждённым данным института «На коленке», все Ростики рождаются с одним общим геном — GNR-69. Этот ген якобы отвечает за изящные габариты их достоинства. Почему так? Потому что Вселенная решила уравновесить их харизму и доброту. Ведь нельзя быть идеальным во всём! --- пхахаха Какая тупая херня, харизма говорят есть ахахах</h4> 
 <br>
-Тайный заговор женского совета
-Согласно неподтверждённой переписке из чата “Девчонки 2007”, было решено: если парень по имени Ростик — значит, не больше 7 см. Секретное правило природы, чтобы женщины сразу понимали, с чем (или с кем) имеют дело. Шутка! Но кто знает...
+<h2>Тайный заговор женского совета</h2>
+<h4>Согласно неподтверждённой переписке из чата “Девчонки 2007”, было решено: если парень по имени Ростик — значит, не больше 7 см. Секретное правило природы, чтобы женщины сразу понимали, с чем (или с кем) имеют дело.</h4>
 <br>
-Исключения из правил
-Есть один Ростик в Архангельске, у которого всё отлично. Но он переименовался в Артёма. Совпадение? Опять же — не думаем.
+<h2>Исключения из правил</h2>
+<h4>Есть один Ростик в Архангельске, у которого всё отлично. Но он переименовался в Артёма. Совпадение? Опять же — не думаем.</h4>
 <br>
-Что делать, если ты Ростик?
-Смириться и шутить первым.
+<h2>Что делать, если ты Ростик?</h2>
+<h4>Смириться и шутить первым.</h4>
 <br>
-Обратиться в ООН.
+<h4>Обратиться в ООН.</h4>
 <br>
-Придумать свою теорию заговоров и опубликовать её на TikTok.
+<h4>Придумать свою теорию заговоров и опубликовать её на TikTok.</h4>
 <br>
-Переименоваться. Да, мы уже говорили, но это работает!
+<h4>Переименоваться. Да, мы уже говорили, но это работает!</h4>
 <br>
-Заключение
-Ростики, мы вас любим. Ваши размеры — не главное. Главное — это душа, чувство юмора и умение не обижаться на дурацкие статьи, которые пишут друзья в рамках розыгрыша.
+<h2>Заключение</h2>
+<h4>Ростики, мы вас любим. Ваши размеры — не главное. Главное — это душа, чувство юмора и умение не обижаться на дурацкие статьи, которые пишут друзья в рамках розыгрыша.</h4>
 <br>
-Хотелось бы написать, но у тебя просто пенис маленький, смирись...
+<h4>Хотелось бы написать, но у тебя просто пенис маленький, смирись лох...</h4>
 </body>
 </html>
